test/parsing/shannon/invalidToken.good
invalidToken.chpl:3: syntax error: syntax error near 'one'
